src/main/java/com/example/pharmacyback/exceptions/errors/ProductNotFoundException.java
package com.example.pharmacyback.exceptions.errors;

public class ProductNotFoundException extends RuntimeException {
    public ProductNotFoundException(String message) {
        super(message);
    }
}
